Integrate Tabris.js project

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+        maven {
+            // provides tabris from directory repository
+            url System.getenv("TABRIS_ANDROID_PLATFORM") + "/bin/templates/project/m2repository"
+        }
     }
 }
 
