--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ android {
 
 dependencies {
 
+    implementation 'com.eclipsesource.tabris.android:tabris:3.7.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
